[gd_scene load_steps=10 format=2]

[ext_resource path="res://doc.gd" type="Script" id=1]
[ext_resource path="res://animations/doc.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/yellow-tinge/rect-tag-above.png" type="Texture" id=4]
[ext_resource path="res://asset/xolonium/Xolonium-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="CircleShape2D" id=4]
radius = 16.9242

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.5, 48.124 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 5 )

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( -2.99663, 1.87289 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.0579, 44.9387 )
shape = SubResource( 4 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]
position = Vector2( -0.561234, -2.52554 )
limit_left = 0
limit_bottom = 600
drag_margin_bottom = 0.4

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, -5 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.420441, -0.420448 )
frames = ExtResource( 2 )
animation = "Idle"
frame = 58
speed_scale = 8.0
playing = true

[node name="timerGameOver" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="afx_grunt" type="AudioStreamPlayer" parent="."]

[node name="afx_step" type="AudioStreamPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( -0.654831, -108.896 )
scale = Vector2( 0.26808, 0.318832 )
texture = ExtResource( 4 )
flip_h = true

[node name="Label" type="Label" parent="Sprite"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -236.037
margin_top = -92.7968
margin_right = 239.963
margin_bottom = 57.2032
custom_fonts/font = SubResource( 3 )
text = "Il Mondo deve trovare
 nuovamente la liberta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 7.85272, -103.215 )
scale = Vector2( 0.238636, 0.322005 )
texture = ExtResource( 4 )
flip_h = true

[node name="Label" type="Label" parent="Sprite2"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -175.956
margin_top = -53.8865
margin_right = 225.044
margin_bottom = 74.1135
custom_fonts/font = SubResource( 5 )
text = "Mavaffffffff"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="camera_shake_requested" from="." to="Camera2D" method="_on_player_camera_shake_requested"]
[connection signal="camera_shake_stop" from="." to="Camera2D" method="_on_player_camera_shake_stop"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="timeout" from="timerGameOver" to="." method="_on_timerGameOver_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
